--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,4 @@
 ¨*.mp3¨ filter=lfs diff=lfs merge=lfs -text
 ¨*.ogg¨ filter=lfs diff=lfs merge=lfs -text
 ¨*.mp4¨ filter=lfs diff=lfs merge=lfs -text
+*.asset filter=lfs diff=lfs merge=lfs -text
